2000-08-22  H.J. Lu  <hjl@gnu.org>

	* elf-bfd.h (elf_link_hash_table): Add runpath.

	* bfd-in.h (bfd_elf_get_runpath_list): New prototype.
	* bfd-in2.h: Rebuilt.

	* elf.c (_bfd_elf_link_hash_table_init): Initialize the
	"runpath" field to NULL.
	(bfd_elf_get_runpath_list): New function.

	* elflink.h (elf_link_add_object_symbols): Record DT_RPATH and
	DT_RUNPATH entries.

2000-08-22  Alexandre Oliva  <aoliva@redhat.com>

	* elf32-sh.c (sh_elf_relocate_section) [R_SH_IND12W,
	R_SH_DIR8WPN, R_SH_DIR8WPZ, R_SH_DIR8WPL]: Handle them
	explicitly.  Improve validation of r_type.

2000-08-21  H.J. Lu  <hjl@gnu.org>

	* elf32-i386.c (elf_i386_size_dynamic_sections): Zero out the
	dynamic allocated content space.  Add a comment to remind us that
	one day this ought to be fixed.
	* elf32-m68k.c (elf_m68k_size_dynamic_sections): Likewise.
	* elf32-sparc.c (elf32_sparc_size_dynamic_sections): Likewise.
	* elf64-hppa.c (elf64_hppa_size_dynamic_sections): Likewise.

2000-08-21  Jason Eckhardt  <jle@cygnus.com>

	* elf32-i860.c (elf32_i860_relocate_pc16): Just write the immediate
	field with the newly relocated value instead of adding it to the
	existing immediate field.
	(elf32_i860_relocate_splitn): Likewise.
	(elf32_i860_relocate_highadj): Likewise.

2000-08-16  Jason Eckhardt  <jle@cygnus.com>

	* elf32-i860.c (elf32_i860_relocate_pc16): Implemented function (it
	was previously just a stub).

2000-08-16  Alexandre Oliva  <aoliva@redhat.com>

	* elflink.c (_bfd_elf_create_got_section): Don't abort().
	Formatting fixes.
	(_bfd_elf_create_dynamic_sections): Likewise.

2000-08-16  Andrew Macleod  <amacleod@cygnus.com>

	* elf64-sparc.c (sparc64_elf_relocate_section): Set relocation address
	for undefined symbols to be the beginning of the section.

	* elf64-sparc.c (sparc64_elf_adjust_dynamic_symbol): Don't allocate
	four extra entries at the beginning of the .rela.plt section.
	(sparc64_elf_finish_dynamic_symbol): Adjust the offset in the .rela.plt