@@ -2716,9 +2716,15 @@ coff_set_flags (abfd, magicp, flagsp)
       return true;
 #endif
       
-    default:			/* Unknown architecture */
-      /* return false;  -- fall through to "return false" below, to avoid
-       "statement never reached" errors on the one below. */
+#ifdef W65MAGIC
+    case bfd_arch_w65:
+      *magicp = W65MAGIC;
+      return true;
+#endif
+
+    default:			/* Unknown architecture.  */
+      /* Fall through to "return false" below, to avoid
+	 "statement never reached" errors on the one below.  */
       break;
     }
 
