@@ -1,3 +1,8 @@
+2000-08-22  Doug Kwan <dkwan@transmeta.com>
+
+	* coff-w65.c (CREATE_LITTLE_COFF_TARGET): Fix typo.
+	* coffcode.h (coff_set_flags): Add detection of w65 architecture.
+
 2000-08-22  H.J. Lu  <hjl@gnu.org>
 
 	* elf-bfd.h (elf_link_hash_table): Add runpath.
